# AI_Calorie_App

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.old  PROJECT_STRUCTURE.md  README.md  README_STREAMLIT.md  app.py  pyproject.toml  run_tests.py
.cache/: 5bce31f12b720859_26662857.pkl
.github/workflows/: ci.yml  codeql.yml  deploy-to-render.yml
food-data-central-mcp-server/: .env.template  README.md  package-lock.json  package.json  tsconfig.json
src/calorie_app/models/: nutrition.py
src/calorie_app/services/: formatting_service.py  llm_nutrition_estimator.py  mcp_nutrition_service.py  nutrition_service.py  vision_service.py
src/calorie_app/tools/: nutrition_calculator.py
src/calorie_app/utils/: cache.py  cache_manager.py  config.py  image_processing.py  llm_cache.py  logging_config.py  response_logger.py  validation.py
src/calorie_app/workflows/: nutrition_workflow.py
streamlit_components/: analysis_display.py  image_uploader.py  modification_ui.py  results_dashboard.py  session_manager.py  sidebar_config.py  usda_enhancement.py
tests/: README.md  __init__.py  test_cache.py  test_config.py  test_image_processing.py  test_nutrition_calculator.py  test_nutrition_models.py  test_validation.py
